spec update
